update on app.js and env example

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,6 +1,7 @@
 # API Server URL - Update this with your backend API URL
+
 # For development (local)
-REACT_APP_API_URL=http://localhost:5000
+REACT_APP_API_URL=http://localhost:{port}
 
 # For production (replace with your actual backend URL)
 # REACT_APP_API_URL=https://your-api-domain.com
